css/contactstyle.css
.nav-link {
	color: white;
}

.navbar-brand {
	color: white;
	font-family: 'Montserrat Alternates', sans-serif;
	font: bold;
	font-size: 25px;
	font-weight: 900;
}

.navbar {
	font-family: 'Montserrat Alternates', sans-serif;
	font: bold;
}

.content {
	color: white;
	max-width: 100%;
	height: auto;
	text-align: center;
	padding-top: 12%;
	padding-right: 20%;
	font-family: 'Montserrat Alternates', sans-serif;
}

.resume {
	font-family: 'Montserrat Alternates', sans-serif;
	padding-right: 4%;
	padding-top: 5%;
	position: relative;
	color: white;
}

.resume:hover {
	color: #17a2b8;
}

.social-med {
	position: relative;
	left: 29%;
	color: white;
	font-size: 35px;
	margin-bottom: 0px;
	max-width: 100%;
	height: auto;
}

.fab {
	color: white;
}

.fab:hover {
	color: #17a2b8;
}

.background-portfolio {
	background-image: url(../assets/bckgrd2.jpg);
	max-width: 100%;
	height: auto;
	background-repeat: no-repeat;
	background-size: cover;
	overflow-x: hidden;
}

.copy-right {
	color: white;
	font-family: 'Montserrat Alternates', sans-serif;
	position: relative;
	padding-top: 11.5%;
	padding-left: 26%;
	max-width: 100%;
	height: auto;
}

